<resources>
    <string name="app_name">VirtualStudyGroup</string>
    <string name="group_image">Group Image</string>
    <string name="team_name">Team Name</string>
    <string name="course_name">Course Name</string>
    <string name="create_your_group">Create your group</string>
    <string name="create_new_account">Create New Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signUpHereText"><u>Sign up here</u></string>
    <string name="logInText"><u>Log in here</u></string>
    <string name="profile"><b>Profile</b></string>
    <string name="new_message">New Message</string>
    <string name="sign_out">Sign Out</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter Message</string>
    <string name="sample_message">sample message</string>
    <string name="multi_line_sample_message">let\'s show a longlonglonglong text that may go into multiple lines</string>
    <string name="to_user_image">to user image</string>
    <string name="from_user_image">from user image</string>
    <string name="user_name">USER Name</string>
    <string name="group_name">Group Name</string>
    <string name="class_name">Class Name</string>
    <string name="group_goal">Group Goal</string>
    <string name="homework_help">Homework Help</string>
    <string name="note_exchange">Note Exchange</string>
    <string name="project_partners">Project Partners</string>
    <string name="explore">EXPLORE</string>
    <string name="create">CREATE</string>
    <string name="filter_group">FILTER GROUP</string>
    <string name="filter">FILTER</string>
    <string name="start_message">Tap anywhere to start!</string>
    <string name="welcome_back_message">Welcome Back, Husky!</string>
    <string name="new_husky">New husky?</string>
    <string name="welcome_screen_display_message">Husky,\nLet\'s Study!</string>
    <string name="hint_to_upload_picture">Tap the blank to upload a profile picture</string>
    <string name="warning_username_password_not_filled">Username or password can\'t be empty</string>
    <string name="explore_groups">Explore Groups</string>
    <string name="my_groups">My Groups</string>
    <string name="chat_rooms">Chat Rooms</string>
    <string name="user_profile">User Profile</string>
    <string name="group_tag">Group Tag:</string>
    <string name="exam_squad">Exam Squad</string>
    <string name="lab_mates">Lab Mates</string>
    <string name="project_npartners">Project\nPartners</string>
    <string name="homework_nhelp">Homework\nHelp</string>
    <string name="notes_nexchange">Note\nExchange</string>
    <string name="group_name_placeholder">Group Name: %s</string>
    <string name="course_name_placeholder">Course Name: %s</string>
    <string name="group_size_placeholder">Group Size: %s out of %s</string>
    <string name="group_description_placeholder">Group Description: %s</string>
    <string name="group_size">Group Size</string>
    <string name="course_name_colon">Course Name:</string>
    <string name="group_name_colon">Group Name:</string>
    <string name="group_description_long_sample">Group Description: This is a fantastic group that you absolutely should join.</string>
    <string name="leave">Leave</string>
    <string name="edit">Edit</string>
    <string name="chatroom">ChatRoom</string>
    <string name="join">Join</string>
    <string name="change_password">change password</string>
    <string name="btn_explore_groups">btn_explore_groups</string>
    <string name="btn_my_groups">btn_my_groups</string>
    <string name="btn_chatroom">btn_chatroom</string>
    <string name="btn_profile">btn_profile</string>
    <string name="user_already_signedin_message">Welcome back\n %s</string>
    <string name="create_group">Create Group</string>
    <string name="tag">Group Tag</string>
    <string name="group_size_colon">Group Size:</string>
    <string name="group_image_colon">Group Image (click to edit):</string>
    <string name="group_description_colon">Group Description:</string>
    <string name="group_description">Group Description</string>
    <string name="finish">FINISH</string>
    <string name="disband">DISBAND</string>
    <string name="image_placeholder_prompt">We will use a default image if no image is uploaded.</string>
    <string name="husky_husky">Husky husky</string>
    <string name="name">Name</string>
    <string name="year">Year</string>
    <string name="major">Major</string>
    <string name="interest">Interest</string>
    <string name="save">Save</string>
    <string name="new_profile_image_prompt">Click the image below to select a new profile image.</string>
</resources>
