<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/BarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_margin="@dimen/padding_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivGroupImgUpload"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding_small"
                android:contentDescription="@string/group_image" />

            <TextView
                android:id="@+id/tvGroupName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/group_name_colon"
                android:textColor="@android:color/black"
                android:maxLines="1"
                android:ellipsize="end"
                android:labelFor="@+id/etGroupName"
                android:textSize="@dimen/text_20sp"
                android:padding="@dimen/padding_small" />

            <TextView
                android:id="@+id/tvCourseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/course_name_colon"
                android:textColor="@android:color/black"
                android:labelFor="@id/etCourseName"
                android:textSize="@dimen/text_20sp"
                android:padding="@dimen/padding_small" />

            <TextView
                android:id="@+id/tvGroupSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/group_size"
                android:textColor="@android:color/black"
                android:labelFor="@+id/etGroupSize"
                android:textSize="@dimen/text_20sp"
                android:padding="@dimen/padding_small" />

            <TextView
                android:id="@+id/tvGroupTags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/group_tag"
                android:textColor="@android:color/black"
                android:labelFor="@+id/etGroupSize"
                android:textSize="@dimen/text_20sp"
                android:padding="@dimen/padding_small"/>

            <LinearLayout
                android:id="@+id/llTagListOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnExamSquad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/exam_squad"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:background="@drawable/tag_button_corners"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/btnLabMates"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lab_mates"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_margin="4dp"
                    android:background="@drawable/tag_button_corners"
                    android:visibility="gone"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llTagListTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnHomeworkHelp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/homework_help"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:background="@drawable/tag_button_corners"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/btnNoteExchange"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/note_exchange"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:background="@drawable/tag_button_corners"
                    android:visibility="gone"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llTagListThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnProjectPartners"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/project_partners"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:background="@drawable/tag_button_corners"
                    android:visibility="gone"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvGroupDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/group_description_long_sample"
                android:labelFor="@+id/etGroupDescription"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_20sp"
                android:padding="@dimen/padding_small" />

        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/btnJoin"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/join"
            android:background="@color/huskyGold"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding_small"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnLeave"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small"
            android:text="@string/leave"
            android:background="@color/huskyGold"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnEdit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small"
            android:text="@string/edit"
            android:background="@color/huskyPurple"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnChatRoom"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_margin="@dimen/padding_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/chatroom"
            android:background="@color/huskyPurple"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:visibility="gone"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>