<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

    <ImageView
        android:id="@+id/iv_user_chat_log_to"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/from_user_image"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name"
        app:srcCompat="@drawable/husky_logo" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_marginStart="8dp"
        android:layout_width="90dp"
        android:layout_height="20dp"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:text="@string/husky_husky"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_user_chat_log_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/white"
        android:maxWidth="240dp"
        android:padding="12dp"
        android:text="@string/multi_line_sample_message"
        app:layout_constraintBottom_toBottomOf="@+id/iv_user_chat_log_to"
        app:layout_constraintStart_toEndOf="@+id/iv_user_chat_log_to"
        app:layout_constraintTop_toTopOf="@+id/tv_user_name"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>